# NanoBoyAdvance

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  COMPATIBILITY.md  COMPILING.md  DEBUG_REPORT.md  DREAMCAST.md  README.md  ROADMAP.md  bios.id0  bios.id1  build.sh  callgrind.out.3165  callgrind.out.6771  clean.sh  commit.sh  config.ini  config.sml  config.toml  nba  shader.cmake  test.sav
source/: CMakeLists.txt  ReadMe.txt  main.cpp
source/arm/: CMakeLists.txt
source/arm/isa-armv4/: emit.inl
source/cartridge/: game_db.cpp  game_db.hpp
source/cartridge/backup/: backup.hpp  backup_file.hpp  eeprom.cpp  eeprom.hpp  sram.hpp
source/common/: CMakeLists.txt  framelimiter.hpp  log.cpp  log.h  log.hpp  static_for.hpp
source/common/dsp/: resampler.hpp  ring_buffer.hpp  stereo.hpp  stream.hpp
source/config/: config.hpp
source/core/: CMakeLists.txt  arm7.cpp  arm7.h  arm7_arminstr.cpp  arm7_thumbinstr.cpp  cpu.cpp  cpu.hpp  dma.cpp  dma.hpp  gba_dma.cpp  gba_dma.h  gba_io.h  gba_memory.cpp  gba_memory.h  gba_timer.cpp  gba_timer.h  gba_video.cpp  gba_video.h  interrupt.hpp  memory.h  scheduler.hpp  timer.cpp  timer.hpp
source/core/apu/: apu.cpp  apu.hpp  callback.cpp  registers.cpp  registers.hpp
source/core/arm/: arm7tdmi.hpp  memory.hpp  state.hpp
source/core/backup/: backup.hpp  backup_file.hpp  eeprom.cpp  eeprom.hpp  flash.cpp  flash.hpp  sram.hpp
source/core/memory/: memory.inl  registers.cpp
source/core/ppu/: compose.cpp  ppu.cpp  ppu.hpp  registers.cpp  registers.hpp
source/device/: audio_device.hpp  input_device.hpp  video_device.hpp
source/dsp/: resampler.hpp  ring_buffer.hpp  stereo.hpp  stream.hpp
source/dsp/resampler/: cosine.hpp  cubic.hpp  nearest.hpp  windowed-sinc.hpp
source/emulator/: emulator.cpp  emulator.hpp
source/emulator/cartridge/: game_db.cpp  game_db.hpp  header.hpp
source/emulator/config/: config.hpp  config_toml.cpp  config_toml.hpp
source/emulator/core/: cpu-memory.inl  cpu-mmio.cpp  cpu-mmio.hpp  cpu.cpp  cpu.hpp  dma.cpp  dma.hpp  interrupt.cpp  interrupt.hpp  registers.cpp  registers.hpp  scheduler.hpp  scheduler_new.hpp  timer.cpp  timer.hpp
source/gba/: CMakeLists.txt  config.hpp  emulator.cpp  emulator.hpp
source/gba/config/: config.hpp
source/gba/core/: cpu.cpp  cpu.hpp  dma.cpp  dma.hpp  scheduler.hpp  timer.cpp  timer.hpp
source/gba/system/: cpu-memory.inl  cpu-mmio.cpp  cpu.hpp  dma.cpp
source/platform/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  screen.cpp  screen.hpp
source/platform/sdl/: CMakeLists.txt  keymap.toml  main.cpp
src/: CMakeLists.txt  bios.s  version.hpp
src/arm/: CMakeLists.txt  arm.cpp  arm.hpp  arm.inl  arm7.hpp  arm7tdmi.hpp  enums.hpp  flags.hpp  interface.hpp  memory.hpp  memory.inl  shifting.hpp  state.hpp
src/arm/alu/: add_sub.inl  shift.inl
src/arm/arm/: arm_emu.cpp  arm_emu.hpp  arm_lut.hpp
src/arm/arm7tdmi/: arm7tdmi.hpp  arm7tdmi.inl  isa-arm.inl  isa-emit.cpp  isa-thumb.inl  memory.inl
src/arm/common/: arithmetic.inl  arm.hpp  interface.hpp
src/arm/core/: arithmetic.inl  arm.hpp  interface.hpp
src/arm/isa/: arm.cpp  arm.inl  emit.cpp  memory.inl  thumb.cpp  thumb.inl
src/arm/isa-armv4/: emit.cpp
src/arm/thumb/: thumb_emu.cpp  thumb_emu.hpp  thumb_lut.hpp
src/audio/: CMakeLists.txt  adapter.h  sdl_adapter.cpp  sdl_adapter.h
src/common/: CMakeLists.txt  file.cpp  framelimiter.hpp  integer.hpp  likely.hpp  m4a.hpp  punning.hpp  static_for.hpp  types.h
src/common/dsp/: resampler.hpp  ring_buffer.hpp  stream.hpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/core/: CMakeLists.txt  bios.cpp  bus.inl  config.hpp  cpu.cpp  cpu.hpp  cpu.inl  dma.cpp  dma.hpp  emulator.hpp  event_device.hpp  memory.cpp  memory.inl  mmio.cpp  mmio.hpp  timer.cpp  timer.hpp
src/core/apu/: apu.cpp  apu.hpp  fifo.hpp  io.cpp  io.hpp  regs.cpp  regs.hpp
src/core/arm/: alu.hpp  arm.cpp  arm.hpp  arm.inl  context.hpp  enums.hpp  flags.hpp  inline_code.hpp  instr_arm.cpp  instr_arm.hpp  instr_thumb.cpp  instr_thumb.hpp  interface.hpp  memory.hpp  memory.inl  shifting.hpp  state.hpp  util.hpp
src/core/cart/: cartridge.cpp  cartridge.hpp  eeprom.cpp  eeprom.hpp  flash.cpp  flash.hpp  header.hpp  save.hpp  sram.cpp  sram.hpp
src/core/cpu/: cpu.cpp  cpu.hpp  dma.cpp  enums.hpp  io.cpp  memory.hpp  mmio.cpp  timer.cpp
src/core/emulator/: dma.cpp  emulator.cpp  emulator.hpp  enums.hpp  interrupt.hpp  io.cpp  io.hpp  memory.hpp  mmio.cpp  mmio.hpp  timer.cpp
src/core/gba/: CMakeLists.txt  cpu.hpp  mmio.hpp
src/core/ppu/: composer.cpp  enums.hpp  helpers.hpp  io.cpp  io.hpp  ppu.cpp  ppu.hpp  ppu.inl  regs.cpp  regs.hpp  render.cpp
src/dsp/: resampler.hpp  ring_buffer.hpp  stereo.hpp
src/emulator/: emulator.cpp  emulator.hpp
src/emulator/cartridge/: game_db.cpp  game_db.hpp  game_pak.hpp  header.hpp
src/emulator/config/: config.hpp  config_toml.cpp
src/emulator/core/: cpu-memory.inl  cpu-mmio.cpp  cpu-mmio.hpp  cpu.cpp  cpu.hpp  scheduler.hpp
src/emulator/device/: audio_device.hpp  input_device.hpp  video_device.hpp
src/gba/: CMakeLists.txt  arm.cpp  arm.h  arm_gba.cpp  arm_gba.hpp  arm_instr.cpp  audio.cpp  audio.h  audio_fifo.h  backup.h  bios.cpp  cart_backup.hpp  composer.h  config.hpp  cpu.cpp  cpu.hpp  dma.cpp  dma.h  emulator.cpp  emulator.hpp  enums.hpp  fifo.h  flash.cpp  flash.h  flash.hpp  gba.cpp  gba.h  input_device.hpp  interrupt.cpp  interrupt.h  interrupt.hpp  io.cpp  io.h  io.hpp  iodef.h  memory.cpp  memory.h  memory.hpp  mmio.cpp  mmio.hpp  (+17 more)
src/gtk/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
src/nba/: CMakeLists.txt
src/qt/: CMakeLists.txt  config.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  screen.cpp  screen.h  screen.hpp  settings.cpp  settings.hpp  settingsdialog.cpp  settingsdialog.h  util.cpp  util.h
src/sdl/: CMakeLists.txt  argument_parser.hpp  arguments.cpp  arguments.h  main.cpp
src/util/: CMakeLists.txt  bit.hpp  file.cpp  file.h  file.hpp  ini.hpp  integer.hpp  log.h  logger.cpp  logger.hpp  meta.hpp  prediction.hpp  types.h
(+1057 files in other folders)
